[package]
name = "irq-loongarch"
version = "0.1.0"
description = "LoongArch IRQ controller drivers (EIOINTC/PCH-PIC/LIOINTC)"
homepage = "https://github.com/numpy1314/irq-loongarch"
repository = "https://github.com/numpy1314/irq-loongarch"
keywords = ["loongarch", "irq", "interrupt", "bare-metal", "kernel"]
license = "MIT OR Apache-2.0"
authors = ["Xie Zujun <zujunxie1@gmail.com>"]
documentation = "https://docs.rs/irq-loongarch"
categories = ["embedded", "no-std"]
edition = "2024"
readme = "README.md"

[features]
default = []
eiointc = ["dep:loongArch64"]
liointc = ["dep:loongArch64"]
pch-pic = []

[dependencies]
loongArch64 = { version = "0.2", optional = true }
