[package]
name = "irq-loongarch"
version = "0.1.1-pre.1"
description = "LoongArch IRQ controller drivers (EIOINTC/PCH-PIC/LIOINTC)"
homepage = "https://github.com/numpy1314/irq_loongarch"
repository = "https://github.com/numpy1314/irq_loongarch"
keywords = ["loongarch", "irq", "interrupt", "bare-metal", "kernel"]
license = "MIT OR Apache-2.0"
authors = ["Xie Zujun <zujunxie1@gmail.com>"]
documentation = "https://docs.rs/irq-loongarch"
categories = ["embedded", "no-std"]
edition = "2024"
readme = "README.md"

[dependencies]

[features]
default = []
pch-pic = []
eiointc = ["dep:loongArch64"]
liointc = ["dep:loongArch64"]

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = { version = "0.2.5", optional = true }

